--- a/index.html
+++ b/index.html
@@ -128,6 +128,37 @@
         </div>
     </section>
 
+    <section id="section-1" class="pagesection">
+        <div class="container reveal fade-bottom">
+            <div class="content">
+                
+                <div class="descriptions">
+                    <div class="title">
+                        Tired of Vendor Lock-In ?
+                    </div>
+                    <div class="subtitle">
+                        <p>
+                            Smash it with <img src="/img/valluu-red.svg" alt=""
+                            style="max-width: 72px; margin: 0px 0px 9px 0px"> !
+                        </p>
+                    </div>
+                    <div class="text">
+                        When migrating to cloud providers, many times customers are locked-in when using their services,
+                        so when moving back to on-premises or moving cloud
+                        provider to leverage competition, to achieve better value and reduce costs, they are constrained. <img src="/img/valluu-red.svg" alt=""
+                        style="max-width: 45px; margin: 0px 0px 6px 0px"> eradicates this
+                        lock-in scenario by enabling the leverage of Kubernetes in the Cloud & On-premise solutions
+                        alike
+                    </div>
+                </div>
+                <div class="visuals">
+                    <image class="reveal fade" src="img/hack-3-red.png" style="max-height: 400px;"></image>
+                </div>
+            </div>
+            <div class="aboutarrow">
+            </div>
+        </div>
+    </section>
 
     <section id="section-2" class="pagesection">
         <div class="container reveal fade-bottom">
@@ -159,6 +190,8 @@
         </div>
     </section>
 
+
+
     <section id="section-3" class="pagesection">
         <div class="container reveal fade-bottom">
             <div class="content">
@@ -172,7 +205,9 @@
                     </div>
                     <div class="text">
                         We have built the missing piece of the Kubernetes solution required to create an intelligent
-                        business solution, <img src="/img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> data workloads. The current stateless & stateful workloads create the power
+                        business solution, <img src="/img/valluu-red.svg" alt=""
+                            style="max-width: 45px; margin: 0px 0px 6px 0px"> data workloads. The current stateless &
+                        stateful workloads create the power
                         to leverage information technologies, such as cloud services, but stop at the
                         infrastructure capability level.
                     </div>
@@ -197,15 +232,17 @@
     </section>
 
     <section id="section-4" class="pagesection diagram">
-        <div class="title">
+        <div class="title" style="text-align: center;">
             Intelligent Business Software
         </div>
 
+        <!--
         <div class="cards-container">
             <div class="flow-diagram">
                 <img src="/img/flow-diagram-horizontal.png" alt="">
             </div>
         </div>
+        -->
 
         <div class="cards-container">
             <div class="card">
@@ -405,7 +442,8 @@
                         6PM
                         on Friday, when the weekend-price-status is set. The Underwriter then receives a
                         notification to
-                        say the <img src="/img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> data workload was run and the results automatically stored in their library, ready to be
+                        say the <img src="/img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">
+                        data workload was run and the results automatically stored in their library, ready to be
                         applied.
                     </div>
                     <!--
@@ -630,27 +668,28 @@
 
                         <div id="welcome-note">
                             <div class="subtitle">Getting Started</div>
-                            <p>Please select your business size to estimate the savings that using <img src="/img/valluu-red.svg" alt="" style="max-height: 13px; margin: 0px 0px 6px 0px">
-                              could deliver to your business.
+                            <p>Please select your business size to estimate the savings that using <img
+                                    src="/img/valluu-red.svg" alt="" style="max-height: 13px; margin: 0px 0px 6px 0px">
+                                could deliver to your business.
                             </p>
                             <p>The estimation is based upon average data for the given business sizes.
-                              Please select "Generate Report" for a detailed breakdown of the input data
-                              and how the saving figure is estimated.
+                                Please select "Generate Report" for a detailed breakdown of the input data
+                                and how the saving figure is estimated.
                             </p>
                         </div>
 
                         <div id="usecases">
-                          <div class="category-group">
-                              <div class="usecase clickable" id="size-0" onclick="setPreset(0);">
-                                  <div>Small</div>
-                              </div>
-                              <div class="usecase clickable" id="size-1" onclick="setPreset(1);">
-                                  <div>Medium</div>
-                              </div>
-                              <div class="usecase clickable" id="size-2" onclick="setPreset(2);">
-                                  <div>Large</div>
-                              </div>
-                          </div>
+                            <div class="category-group">
+                                <div class="usecase clickable" id="size-0" onclick="setPreset(0);">
+                                    <div>Small</div>
+                                </div>
+                                <div class="usecase clickable" id="size-1" onclick="setPreset(1);">
+                                    <div>Medium</div>
+                                </div>
+                                <div class="usecase clickable" id="size-2" onclick="setPreset(2);">
+                                    <div>Large</div>
+                                </div>
+                            </div>
                         </div>
                         <div>
                             <div id="finish-buttons" class="button-group">
@@ -673,7 +712,8 @@
                     </div>
                     <div id="display">
                         <div id="overview">
-                            <p class="header"><img src="/img/valluu-red.svg" alt="" style="max-height: 16px; margin: 0px 0px 6px 0px"> Cost Saving:</p>
+                            <p class="header"><img src="/img/valluu-red.svg" alt=""
+                                    style="max-height: 16px; margin: 0px 0px 6px 0px"> Cost Saving:</p>
                             <p class="v">$<span id="ptv-figure">0</span></p>
                             <!-- <p class="v">$<span id="ptv-figure">0</span> <span class="note">per annum</span></p> -->
                             <p class="note">per annum</p>
@@ -691,7 +731,10 @@
                             <div>
                                 <h3 style="color: var(--vgreen); margin-top: 0;">Reduce CO<sub>2</sub> emissions
                                 </h3>
-                                <p>In running the <img src="/img/valluu-red.svg" alt="" style="max-height: 13px; margin: 0px 0px 6px 0px"> Data Workloads associated with your inputs, <img src="/img/valluu-red.svg" alt="" style="max-height: 13px; margin: 0px 0px 6px 0px"> could save
+                                <p>In running the <img src="/img/valluu-red.svg" alt=""
+                                        style="max-height: 13px; margin: 0px 0px 6px 0px"> Data Workloads associated
+                                    with your inputs, <img src="/img/valluu-red.svg" alt=""
+                                        style="max-height: 13px; margin: 0px 0px 6px 0px"> could save
                                     you
                                     <span id="elec-saving">0</span> kWh of electricity per annum.</b>
                                 </p>
