Update CO2 number text colour

--- a/index.html
+++ b/index.html
@@ -736,7 +736,7 @@
                                     with your inputs, <img src="/img/valluu-red.svg" alt=""
                                         style="max-height: 13px; margin: 0px 0px 6px 0px"> could save
                                     you
-                                    <span id="elec-saving">0</span> kWh of electricity per annum.</b>
+                                    <span id="elec-saving" style="color: var(--vred);">0</span> kWh of electricity per annum.</b>
                                 </p>
                                 <p>This is equivalent to...</p>
                             </div>
@@ -746,9 +746,9 @@
                                 <img src="img/tree.png" style="width: 80px;" />
                                 <p style="font-size: 16px; color: var(--vgreen);">or</p>
                                 <img src="img/car.png" style="width: 80px;" />
-                                <span>Planting <b><span id="num-trees">0</span></b> trees</span>
+                                <span>Planting <b><span id="num-trees" style="color: var(--vred);">0</span></b> trees</span>
                                 <br />
-                                <span>Saving <b><span id="num-miles">0</span></b> car-miles</span>
+                                <span>Saving <b><span id="num-miles" style="color: var(--vred);">0</span></b> car-miles</span>
                             </div>
                             <!-- </div> -->
                         </div>
