Attempt formatting fix

--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
                         <div id="welcome-note">
                             <div class="subtitle">Getting Started</div>
                             <p>Please select your business size to estimate the savings that using <img
-                                    src="/img/valluu-red.svg" alt="" style="max-height: 13px; margin: 0px 0px 6px 0px">
+                                    src="/img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">
                                 could deliver to your business.
                             </p>
                             <p>The estimation is based upon average data for the given business sizes.
@@ -713,7 +713,7 @@
                     <div id="display">
                         <div id="overview">
                             <p class="header"><img src="/img/valluu-red.svg" alt=""
-                                    style="max-height: 16px; margin: 0px 0px 6px 0px"> Cost Saving:</p>
+                                    style="max-width: 45px; margin: 0px 0px 6px 0px"> Cost Saving:</p>
                             <p class="v">$<span id="ptv-figure">0</span></p>
                             <!-- <p class="v">$<span id="ptv-figure">0</span> <span class="note">per annum</span></p> -->
                             <p class="note">per annum</p>
@@ -732,9 +732,9 @@
                                 <h3 style="color: var(--vgreen); margin-top: 0;">Reduce CO<sub>2</sub> emissions
                                 </h3>
                                 <p>In running the <img src="/img/valluu-red.svg" alt=""
-                                        style="max-height: 13px; margin: 0px 0px 6px 0px"> Data Workloads associated
+                                        style="max-width: 45px; margin: 0px 0px 6px 0px"> Data Workloads associated
                                     with your inputs, <img src="/img/valluu-red.svg" alt=""
-                                        style="max-height: 13px; margin: 0px 0px 6px 0px"> could save
+                                        style="max-width: 45px; margin: 0px 0px 6px 0px"> could save
                                     you
                                     <span id="elec-saving" style="color: var(--vred);">0</span> kWh of electricity per annum.</b>
                                 </p>
