--- a/test_redesign_page.html
+++ b/test_redesign_page.html
@@ -78,15 +78,17 @@
 <body>
 
     <section id="intro" class="intro">
-        <div class="databasecloud ">
+<!--         <div class="databasecloud ">
             <image src="img/dataworkloadslifecycle.svg"></image>
-        </div>
+        </div> -->
         <div class="introdesc">
             <div class="logo">
                 <image src="img/valluu.svg"></image>
             </div>
-            <div class="title">Are you leaving real business value on the table with your current leveraging of
-                Kubernetes..?
+            <div class="title" style="font-size: 2em;">Data Democratisation
+            </div>
+            <div style="font-size: 0.5em; color: #000000; font-family: graphik-regular;">
+              Realise the value of your data
             </div>
             <div class="navigation">
                 <!--
