--- a/test_redesign_page.html
+++ b/test_redesign_page.html
@@ -85,9 +85,9 @@
             <div class="logo">
                 <image src="img/valluu.svg"></image>
             </div>
-            <div class="title" style="font-size: 2em;">Data Democratisation
+            <div class="title" style="font-size: 6em;">Data Democratisation
             </div>
-            <div style="font-size: 0.5em; color: #000000; font-family: graphik-regular;">
+            <div style="font-size: 1.5em; color: #ffffff; font-family: graphik-regular;">
               Realise the value of your data
             </div>
             <div class="navigation">
