--- a/test_redesign_page.html
+++ b/test_redesign_page.html
@@ -85,7 +85,7 @@
             <div class="logo">
                 <image src="img/valluu.svg"></image>
             </div>
-            <div class="title" style="font-size: 6em;">Data Democratisation
+            <div class="title" style="font-size: 4em; margin-bottom: 20px;">Data Democratisation
             </div>
             <div style="font-size: 1.5em; color: #ffffff; font-family: graphik-regular;">
               Realise the value of your data
@@ -131,30 +131,30 @@
     </section>
 
     <section id="section-1" class="pagesection">
-        <div class="container reveal fade-bottom">
+      <div class="container reveal fade-bottom">
             <div class="content">
-                
+                <div class="visuals">
+                    <image class="reveal fade" src="img/waiting-2.png" style="max-height: 400px;"></image>
+                </div>
                 <div class="descriptions">
                     <div class="title">
-                        Tired of Vendor Lock-In ?
+                        Why can't we exploit our data?
                     </div>
                     <div class="subtitle">
                         <p>
-                            Smash it with <img src="/img/valluu-red.svg" alt=""
-                            style="max-width: 72px; margin: 0px 0px 9px 0px"> !
+                            Mind the gap
                         </p>
                     </div>
                     <div class="text">
-                        When migrating to cloud providers, many times customers are locked-in when using their services,
-                        so when moving back to on-premises or moving cloud
-                        provider to leverage competition, to achieve better value and reduce costs, they are constrained. <img src="/img/valluu-red.svg" alt=""
-                        style="max-width: 45px; margin: 0px 0px 6px 0px"> eradicates this
-                        lock-in scenario by enabling the leverage of Kubernetes in the Cloud & On-premise solutions
-                        alike
+                        A recent study* showed that 75% of employees are restricted when it comes to being able to exploit
+                        the potential of their company’s data. The current Business and IT solutions are complex, expensive,
+                        and unable to meet the pressures on the ever increasing demands for the use of data, and the Business
+                        and IT functions are separated into two silos, with a huge gap in between, and so they are
+                        collectively unable to meet the demands of the business in the required timeframe.
                     </div>
-                </div>
-                <div class="visuals">
-                    <image class="reveal fade" src="img/hack-3-red.png" style="max-height: 400px;"></image>
+                    <div class="notes">
+                        <p>*The Human Impact of Data Literacy - Report 2020 - Accenture</p>
+                    </div>
                 </div>
             </div>
             <div class="aboutarrow">
