--- a/test_redesign_page.html
+++ b/test_redesign_page.html
@@ -85,7 +85,7 @@
             <div class="logo">
                 <image src="img/valluu.svg"></image>
             </div>
-            <div class="title" style="font-size: 4em; margin-bottom: 20px;">Data Democratisation
+            <div class="title" style="font-size: 3em; margin-bottom: 20px;">Data Democratisation
             </div>
             <div style="font-size: 1.5em; color: #ffffff; font-family: graphik-regular;">
               Realise the value of your data
@@ -133,9 +133,6 @@
     <section id="section-1" class="pagesection">
       <div class="container reveal fade-bottom">
             <div class="content">
-                <div class="visuals">
-                    <image class="reveal fade" src="img/waiting-2.png" style="max-height: 400px;"></image>
-                </div>
                 <div class="descriptions">
                     <div class="title">
                         Why can't we exploit our data?
@@ -155,6 +152,9 @@
                     <div class="notes">
                         <p>*The Human Impact of Data Literacy - Report 2020 - Accenture</p>
                     </div>
+                  <div class="visuals">
+                    <image class="reveal fade" src="img/waiting-2.png" style="max-height: 400px;"></image>
+                </div>
                 </div>
             </div>
             <div class="aboutarrow">
@@ -170,20 +170,15 @@
                 </div>
                 <div class="descriptions">
                     <div class="title">
-                        Enabling data democratisation
+                        Data democratisation in practice
                     </div>
                     <div class="subtitle">
                         <p>
-                            * 75% of employees are restricted when working with data
+                            How will you use your Data Workloads?
                         </p>
                     </div>
                     <div class="text">
-                        By removing complex barriers of
-                        access and understanding, Valluu enables the business to leverage all its internal and external
-                        datasources.
-                    </div>
-                    <div class="notes">
-                        <p>* The Human impact of Data Literacy - Report 2020 - Accenture</p>
+                        (Examples to go here.)
                     </div>
                 </div>
             </div>
