--- a/test_redesign_page.html
+++ b/test_redesign_page.html
@@ -152,10 +152,10 @@
                     <div class="notes">
                         <p>*The Human Impact of Data Literacy - Report 2020 - Accenture</p>
                     </div>
-                  <div class="visuals">
-                    <image class="reveal fade" src="img/waiting-2.png" style="max-height: 400px;"></image>
                 </div>
-                </div>
+              <div class="visuals">
+                  <image class="reveal fade" src="img/waiting-2.png" style="max-height: 400px;"></image>
+              </div>
             </div>
             <div class="aboutarrow">
             </div>
@@ -166,7 +166,7 @@
         <div class="container reveal fade-bottom">
             <div class="content">
                 <div class="visuals">
-                    <image class="reveal fade" src="img/waiting-2.png" style="max-height: 400px;"></image>
+                    <image class="reveal fade" src="img/speed-3-red.png" style="max-height: 400px;"></image>
                 </div>
                 <div class="descriptions">
                     <div class="title">
@@ -194,33 +194,18 @@
             <div class="content">
                 <div class="descriptions">
                     <div class="title">
-                        Realising business value
+                        What do we mean by a 'Data Workload'?
                     </div>
                     <div class="subtitle">
-                        <p>Leveraging the power of Kubernetes
+                        <p>(Subtitle to go here)
                         </p>
                     </div>
                     <div class="text">
-                        We have built the missing piece of the Kubernetes solution required to create an intelligent
-                        business solution, <img src="/img/valluu-red.svg" alt=""
-                            style="max-width: 45px; margin: 0px 0px 6px 0px"> data workloads. The current stateless &
-                        stateful workloads create the power
-                        to leverage information technologies, such as cloud services, but stop at the
-                        infrastructure capability level.
+                        (Text to go here.)
                     </div>
-                    <!--
-                    <div class="text">
-                        Valluu data workload management solution creates the ability to utilise the required company
-                        data sources and business applications. The solution creates a data change management interface,
-                        that consolidates the whole data management lifecycle. It creates & maintains a meta-data
-                        library that powers the user interfaces, utilises a drag-and-drop tool for creating new data
-                        workloads, with auto-deploy of the required data changes to the source database and ongoing
-                        iterative utilisation from a centralised library.
-                    </div>
-                    -->
                 </div>
                 <div class="visuals">
-                    <image class="reveal fade" src="img/section1.png" style="max-height: 400px;"></image>
+                    <image class="reveal fade" src="img/refactor-2.png" style="max-height: 400px;"></image>
                 </div>
             </div>
             <div class="aboutarrow">
