--- a/test_redesign_page.html
+++ b/test_redesign_page.html
@@ -213,7 +213,7 @@
         </div>
     </section>
 
-    <section id="section-4" class="pagesection diagram">
+<!--     <section id="section-4" class="pagesection diagram">
         <div class="title" style="text-align: center;">
             Intelligent Business Software
         </div>
@@ -363,45 +363,123 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
-
-
-    <section id="section-5" class="pagesection reveal fade">
+    <section id="section-4" class="pagesection reveal fade">
         <div class="content">
             <div class="descriptions reveal fade">
                 <div class="title">
-                    Intelligent business design
+                    Planning Data Workloads
                 </div>
                 <div class="subtitle">
-                    Dynamic business changes
+                    Bringing the Business and IT together
                 </div>
                 <div class="text">
-                    By starting from the viewpoint of the business decision maker, Valluu allows the business user to
-                    create <img src="/img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> data
-                    workloads with simple drag & drop functionality, that can then be dynamically applied.
+                    <img src="/img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> bridges the gap
+                    between Business and IT to put the use of data into the hands of the business user.
+                    We have created a single interface for all the actors in the data management lifecycle to work together in
+                    a common way with a user-centred design, providing true agility and innovation where it’s needed most: in
+                    the hands of the business.
                 </div>
-                <!--
-                <div class="text">
-                    Valluu enables business users decisions to be implemented directly to the customer transactions, by
-                    allowing data changes to be applied in real-time. This brings alive the possibility of merging
-                    multiple data-sources to monitor business decision impacts, based on the actual customers response
-                    to using the data.
-                </div>
-                <div class="text">
-                    New data workloads can be created with Valluu without the need for new code created by the IT
-                    function, with automatic deployment to the live information technology. Valluu centralises and makes
-                    visible the governance of access, change, systems utilisation & spend controls.
-                </div>
-                -->
-
             </div>
             <div class="visuals reveal fade">
-                <img src="/img/section2.png" alt="" style="max-width: 300px;">
+                <img src="/img/flow-pic-1.png" alt="" style="max-width: 300px;">
             </div>
         </div>
     </section>
+  
+  <section id="section-5" class="pagesection reveal fade">
+        <div class="content">
+            <div class="visuals reveal fade">
+                <img src="/img/flow-pic-2.png" alt="" style="max-width: 300px;">
+            </div>
+            <div class="descriptions reveal fade">
+                <div class="title">
+                    Creating Data Workloads
+                </div>
+                <div class="subtitle">
+                    Achieving outcomes without the need to code
+                </div>
+                <div class="text">
+                    Currently, creating a Data Workload is a complex and time-consuming task, which is buried in the IT
+                    organisation’s capability. With <img src="/img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">,
+                    you create workloads without the need to code by using our drag & drop interface. In addition, users
+                    can easily change and update source datasets, thus enabling the business to respond to events with true agility.
+                </div>
+            </div>
+        </div>
+    </section>
+  
+  <section id="section-6" class="pagesection reveal fade">
+        <div class="content">
+            <div class="descriptions reveal fade">
+                <div class="title">
+                    Releasing & cataloguing Data Workloads
+                </div>
+                <div class="subtitle">
+                    Governance, Controls, and Library
+                </div>
+                <div class="text">
+                    Uncontrolled and unregulated data utilisation is constantly advancing through ‘shadow IT’,
+                    resulting in inefficient set-ups which are restricted in potential and under-deliver in outcomes.
+
+                    <img src="/img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> provides
+                    a centralised collaboration focus, with all Data Workloads automatically aggregated into a library,
+                    which is accessible through users’ profiles. Activity metadata is captured and visible in the
+                    management dashboard so that administrators can monitor and guide system usage. Poor regulatory
+                    management arising in the world of shadow IT exposes a company to the risk of huge fines and
+                    associated brand damage; <img src="/img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px">
+                    cuts this risk with its built-in controls and facility for regulatory reporting.
+                </div>
+            </div>
+            <div class="visuals reveal fade">
+                <img src="/img/flow-pic-3.png" alt="" style="max-width: 300px;">
+            </div>
+        </div>
+    </section>
+  
+  <section id="section-7" class="pagesection reveal fade">
+        <div class="content">
+            <div class="visuals reveal fade">
+                <img src="/img/flow-pic-5.png" alt="" style="max-width: 300px;">
+            </div>
+            <div class="descriptions reveal fade">
+                <div class="title">
+                    Using the Data Workload
+                </div>
+                <div class="subtitle">
+                    Fast scheduling with automated efficiencies
+                </div>
+                <div class="text">
+                    With today’s solutions, once a Data Workload has been created, a complex change procedure is often required
+                    with numerous levels of approval from people who have no context as to the criticality of the timing.
+                    Additionally, current estimates show that up to 60% of all available compute capability is sat idle, with
+                    services holding compute resources even when they are not running.
+
+                    <img src="/img/valluu-red.svg" alt="" style="max-width: 45px; margin: 0px 0px 6px 0px"> allows you to
+                    quickly and easily schedule a workload when you need it, and it manages the compute environment to only use
+                    the resource whilst the workload is being run. Upon completion, it will automatically cleanse the footprint,
+                    ensuring that all resources are released for other use and the cost of IT is not increased. This fast scheduling
+                    can be done through Microsoft Teams or similar applications with simple natural-language commands – no need for
+                    complicated procedures or to get IT involved.
+                </div>
+            </div>
+        </div>
+    </section>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
 
     <section id="section-6" class="pagesection">
         <div class="democratization container">
